<resources>
    <string name="app_name">ImageApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="buttonRegister">Register</string>
    <string name="buttonLogin">Login</string>
    <string name="haveAcc">Do you have an account?</string>
    <string name="haventAcc">Do you have not an account?</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="registerError">Register Error !</string>
    <string name="loginError">Email or password is incorrect !</string>
    <string name="loginSuccessful">Login successful !</string>
    <string name="registerSuccessful">Register successful !</string>
    <string name="blankFields">Please fill in the blank fields !</string>
    <string name="rememberMe">Remember Me</string>
    <string name="listingTitle">Images</string>
    <string name="detailTitle">Details</string>
    <string name="favoritesTitle">Favorites</string>


</resources>